# routes/api.php
@@ -5,6 +5,7 @@ use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\IncomeController;
 use App\Http\Controllers\BalanceController;
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\ExpenseController;
 
 
 /*
@@ -17,14 +18,23 @@ use App\Http\Controllers\AuthController;
 | is assigned the "api" middleware group. Enjoy building your API!
 |
 */
-
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
-});
-
-Route::post('/income', [IncomeController::class, 'store']);
-Route::get('/income/{userId}', [IncomeController::class, 'show']);
-Route::get('/balance/{userId}', [BalanceController::class, 'show']);    
+   
 Route::post('/login', [AuthController::class, 'login']);
 Route::post('/register', [AuthController::class, 'register']);
+
+Route::middleware('auth:sanctum')->group(function () {
+  Route::post('/income', [IncomeController::class, 'store']);
+  Route::get('/income/{userId}', [IncomeController::class, 'show']);
+  Route::put('/income/{id}', [IncomeController::class, 'update']);
+  Route::delete('/income/{id}', [IncomeController::class, 'destroy']);
+
+  Route::get('/balance/{userId}', [BalanceController::class, 'show']); 
+
+  Route::post('/expense', [ExpenseController::class, 'store']);
+  Route::get('/expense/{userId}', [ExpenseController::class, 'show']);
+  Route::put('/expense/{id}', [ExpenseController::class, 'update']);
+  Route::delete('/expense/{id}', [ExpenseController::class, 'destroy']);
+
+});
+
 
